--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "version": "1.0.0",
   "author": {
-    "name": "ThemeSelection",
+    "name": "WestZone",
     "url": "https://themeselection.com/"
   },
   "bugs": {
