--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "mdi-material-ui": "^7.1.0",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
-    "next": "^12.0.4",
+    "nodemailer": "^6.9.4",
     "nprogress": "^0.2.0",
     "qrcode.react": "^3.1.0",
     "react": "17.0.2",
