--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
     "nanoid": "^4.0.2",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.4",
     "nprogress": "^0.2.0",
     "qrcode.react": "^3.1.0",
