--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
+    "cron": "node src/pages/api/crons/admindailyincomeupdate.js src/pages/api/crons/adminDistributeToUsers.js ",
     "lint": "eslint --fix \"src/**/*.{js,jsx}\"",
     "format": "prettier --write \"src/**/*.{js,jsx}\""
   },
@@ -70,6 +71,7 @@
     "mdi-material-ui": "^7.1.0",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
+    "mongoose-sequence": "^5.3.1",
     "nanoid": "^4.0.2",
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.4",
