--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "themeselection"
   ],
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 3000",
     "build": "next build",
     "start": "next start",
     "export": "next export",
@@ -69,6 +69,8 @@
     "jsonwebtoken": "^9.0.1",
     "jwt-decode": "^3.1.2",
     "mdi-material-ui": "^7.1.0",
+    "mobile-detect": "^1.4.5",
+    "moment": "^2.29.4",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
     "mongoose-sequence": "^5.3.1",
@@ -83,6 +85,7 @@
     "react-dom": "17.0.2",
     "react-perfect-scrollbar": "^1.5.8",
     "react-popper": "^2.2.5",
+    "react-simple-captcha": "^9.0.17",
     "yup": "^1.2.0"
   },
   "devDependencies": {
